--- a/boostrap.html
+++ b/boostrap.html
@@ -40,7 +40,8 @@
           </div>
         </div>
       </nav>
-    <div class="container">
+      <!-- gallery section -->
+    <section class="container">
         <h2 class="py-3 text-center">Cake & Bake</h2>
         <div class="row py-3">
         <div class="col">
@@ -85,9 +86,9 @@
 
         </div>
         </div>
-    </div>
-
-    <div class="container">
+      </section>
+      <!-- product section -->
+    <section class="container">
         <h2 class="py-3 text-center">Products</h2>
         <div class="row py-3">
           <div class="col-md-4">
@@ -158,8 +159,9 @@
               </div>
             </div>
           </div>
-    </div>
-    <div class="container">
+    </section>
+     <!-- about section -->
+    <section class="container">
       <h2 class="py-3 text-center">About US</h2>
       <div class="row featurette about pt-5">
         <div class="col-6 ">
@@ -178,8 +180,9 @@
         </div>
       </div>
 
-    </div>
-    <div class="container">
+    </section>
+    <!-- contact section -->
+    <section class="container">
       <h2 class="py-3 text-center">Contact US</h2>
       <div class="row">
           <div class="mapouter col-6">
@@ -217,13 +220,12 @@
                 </select>
               </div>
             </div>
-           
             <button type="submit" class="btn btn-warning mt-3">submit</button>
           </form>
         </div>
       </div>
-    </div>
-    
+    </section>
+    <!-- footer section -->
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
